--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vendors/portaudio"]
-	path = vendors/portaudio
+[submodule "deps/portaudio"]
+	path = deps/portaudio
 	url = git@github.com:PortAudio/portaudio.git
