Initial Module/Player interaction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ add_subdirectory(tests)
 add_subdirectory(deps/portaudio)
 
 add_executable(player ${PLAYER_SOURCE} src/paex_sine_c++.cpp)
-target_compile_options(player PUBLIC ${CLANG_WARNINGS} -Werror --save-temps)
+target_compile_options(player PUBLIC ${CLANG_WARNINGS} -Werror)
 target_link_libraries(player PUBLIC portaudio)
 target_include_directories(player PRIVATE "${PROJECT_BINARY_DIR}" ${CMAKE_CURRENT_SOURCE_DIR}/src)
-target_include_directories(player PUBLIC "${PROJECT_BINARY_DIR}" ${CMAKE_CURRENT_SOURCE_DIR}/VENDORS/PORTAUDIO/INCLUDE)
+target_include_directories(player SYSTEM PUBLIC "${PROJECT_BINARY_DIR}" ${CMAKE_CURRENT_SOURCE_DIR}/VENDORS/PORTAUDIO/INCLUDE)
