Enable address sanitizer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,8 @@ add_subdirectory(tests)
 add_subdirectory(deps/portaudio)
 
 add_executable(player ${PLAYER_SOURCE} src/paex_sine_c++.cpp)
-target_compile_options(player PUBLIC ${CLANG_WARNINGS} -Werror)
+target_compile_options(player PUBLIC ${CLANG_WARNINGS} -Werror -fsanitize=address)
+target_link_options(player PUBLIC -fsanitize=address)
 target_link_libraries(player PUBLIC portaudio)
 target_include_directories(player PRIVATE "${PROJECT_BINARY_DIR}" ${CMAKE_CURRENT_SOURCE_DIR}/src)
 target_include_directories(player SYSTEM PUBLIC "${PROJECT_BINARY_DIR}" ${CMAKE_CURRENT_SOURCE_DIR}/VENDORS/PORTAUDIO/INCLUDE)
